--- a/prosess/referanser.bib
+++ b/prosess/referanser.bib
@@ -8,8 +8,24 @@
 
 @inbook{jj,
 	author="David W. Johnson \& Roger T. Johnson",
-	title="Multicultural Education and Human Relations: Valuing Diversity",
+	title="Joining together. Group theory and group skills",
 	chapter="10: Valuing diversity",
-	publisher="Allyn \& Bacon",
-	year="2001"
+	publisher="Pearson",
+	year="2006"
 }
+
+@inbook{wheelan,
+	author="Susan A. Wheelan",
+	title="Creating Effective Teams. A Guide for Members and Leaders",
+	chapter="5: Effective Team Members",
+	publisher="SAGE",
+	year="2009"
+}
+
+@article{sjovold,
+	author="Endre Sjøvold",
+	title="Maturity and effectiveness in small groups",
+	journal="Nordic psychology",
+	year="2006"
+}
+	
