Added appendix for source code

--- a/rapport.sty
+++ b/rapport.sty
@@ -1,5 +1,6 @@
 %Last pakker som må være enten engelsk eller norsk:
 \usepackage{cleveref}
+\usepackage{listings}
 
 %Forside for rapport, settes inn med \forside
 \newcommand*{\forside}{\begingroup
