--- a/rapport/main.tex
+++ b/rapport/main.tex
@@ -35,6 +35,9 @@
 	\include{resultats_numerics} %Kap. 6
 	\include{conclusion}	%Kap. 7
 
+%Appendix:
+	\include{appendixa}
+
 %Referanser:
 	\bibliographystyle{plain}
 	\bibliography{references.bib}
