made some changes to report

--- a/rapport/appendixa.tex
+++ b/rapport/appendixa.tex
@@ -1,6 +1,6 @@
 \appendix
 \chapter{Program source code}
-
+\label{ap:source_code}
 \section{Main file}
 
 \lstinputlisting[language=C++]{../program/source/main.cpp}
