--- a/rapport/implementation.tex
+++ b/rapport/implementation.tex
@@ -44,6 +44,8 @@ See \cref{fig:classdiagram} for a class diagram of c++ implementation.
 The Bash script is not discussed in further detail as it can be considered to be
 very simple.
 
+See appendix \cref{ap:source_code}
+
 \section{The physical system}
 
 The main task of the physical system is to implement a matrix-vector multiplication
