--- a/rapport/implementation.tex
+++ b/rapport/implementation.tex
@@ -44,7 +44,7 @@ See \cref{fig:classdiagram} for a class diagram of c++ implementation.
 The Bash script is not discussed in further detail as it can be considered to be
 very simple.
 
-See appendix \cref{ap:source_code}
+See \cref{ap:source_code} for source code and scripts.
 
 \section{The physical system}
 
