--- a/rapport/appendixa.tex
+++ b/rapport/appendixa.tex
@@ -31,11 +31,16 @@
 
 \section{Script to plot raw data from program using gnuplot}
 
-\lstinputlisting[language=C++]{../program/build/plot.sh}
+\lstinputlisting[language=bash]{../program/build/plot.sh}
 
 \section{Script to make movie of plots using ffmpeg}
 
-\lstinputlisting[language=C++]{../program/build/movie.sh}
+\lstinputlisting[language=bash]{../program/build/movie.sh}
+
+\section{Makefile}
+
+\lstinputlisting[language=make]{../program/build/Makefile}
+
 
 
 
