--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -157,34 +157,32 @@ har kun ved ett tilfelle anvendt flertall-paragrafen i kontrakten og det var i
 forbindelse med språkvalg på prosessrapporten. Knut var i utgangspunktet uvillig
 til å skrive på norsk, og det gikk ikke å ``vinne'' han over. Etter noen
 minutter med diskusjon ble altså Knut Halvor overstyrt.
-\section{Roller vi tok}
-``Ein person blir ein leder når han eller hun blir satt i ein lederposisjon.''
+
+\subsection{Roller i gruppa}
+"Ein person blir ein leder når han eller hun blir satt i ein lederposisjon."
 
 %" Lederskap begynner med ein formel rolle struktur som definerer gruppe hierakiet av autoritet.(Authority; legitimate power assigned to a particular position.)
 
-I gruppekontrakten blei det bestemt at me skulle ha ein flatstruktur i gruppa. Valget var basert på at ingen egentlig ville gå inn i ein lederrolle, og at me ville ha ein større frihet til å formulere arbeidsoppgåvene sjølv. Me kom likevel opp i situsjoner som krevde at ein person tok ledelse for å sikre effektiviteten til gruppa. 
-\emph{her må vi ha et eksempel} I praksis fekk gruppa ein situasjonsbetinget lederstruktur.
+I gruppekontrakten blei det bestemt at me skulle ha ein flatstruktur i gruppa. Valget var basert på at ingen egentlig ville gå inn i ein lederrolle, og at me ville ha ein større frihet til å formulere arbeidsoppgåvene sjølv. Me kom likevel opp i situsjoner som krevde at ein person tok ledelse for å sikre effektiviteten til gruppa. \emph{her må vi ha et eksempel} I praksis fekk gruppa ein situasjonsbetinget lederstruktur (ref.).
 
-\subsection{Litt teori}
-Situasjonsbetinget lederskap er definert som delt lederskap blant gruppemedlemmer der medlemmene varierer oppførselen etter kva funksjon gruppa treng til ein kvar tid. Ein funksjon er ein aksjon som blir sett igang for å sikre effektiviteten i gruppa. Me kan snakke om to typer aksjoner; oppgåveretta aksjoner og relasjonsretta/samholdsretta (relationship) aksjoner. 
+Den situasjonsbetinget lederskap strukturen førte og til at gruppemedlemmer tok rollen som leder i den fagdelen dei hadde mest autoritet på. Åsmund blei dermed ein uformell leder for fysikkdelen, Turid for numerikk delen og Knut for programeringsdelen i c++. Dei tok dermed ansvar for framgang og oppgåvedeling på desse områdene, og strukturerte samarbeidet mellom gruppemedlemmene på sitt respektive felt. 
 
-I Robert-Bales interaksjon prosess analyse trekk han fram at i ein gruppe er det ofte nokon som intrer i rolla som oppgåve-leder og ein som trer inn i rolla som sosial-emosiell leder. Kjenneteiknet på ein oppgåve-leder er at det er ofte han som setter igang aksjoner for å sikre at målet til gruppa blir nådd (oppgåveretta aksjoner), mens den sosiall-emosielle lederen setter igang aksjoner for å oppretthalde og forbedre interrelasjonene i gruppa (relasjonsretta aksjoner).
+I vår gruppe såg me at Åsmunde i større grad gjekk inn i rolla som oppgåve-leder. Han tok ansvar for å settje opp eit system for å utveksle informasjon rundt prosjektet, github, og tok ofte intiativ ved å leggje ut relevante artikler på sida. Han gjekk dermed og inn i rolla som  samordneren (ref) på gruppa. Me merka oss og at han var meir aktiv i prosjektet i EIT, som er den delen som er mest oppgåvefokusert. 
 
-\subsection{Gruppa}
-I vår gruppe såg me at Åsmunde i større grad gjekk inn i rolla som oppgåve-leder. Han tok ansvar for å settje opp eit system for å utveksle informasjon rundt prosjektet, github, og tok ofte intiativ ved å leggje ut relevante artikler på sida. Han var og meir aktiv i prosjektet i EIT, som er den delen som er mest oppgåvefokusert. 
-Bales staturer og at medlemmer som er veldig oppgåvefokusert er mindre innvolvert i relasjonsretta aksjoner. Paul er den i gruppa som er mest oppgåvefokusert.På gruppa har han ein tendens til å ta ein faglig tilnærming, og liker å fokusere mest på oppgåva for hand. Han er dermed ein styrke på gruppa ved at han held diskusjonene relevante, i tillegg til at han er eit pålitelig medlem når det gjeld å gjennomføre arbeid i tide. Me ser likevel ein tendens til at Paul er mindre involvert i relasjonsretta aksjoner på gruppa. 
-
-Den som oftas gjekk inn i rolla som sosial-emosionell leder var Turid. Ho var eit viktig ledd i gruppa i form av å uttrykke klare meininger og frustrasjoner over moment i gruppa som ikkje fungerte optimalt. Når det var ting som fungerte bra i gruppa kom ho inn med støtte og oppmuntring til å fortsette på samme linje. Sjølv om ho var ein av dei som oftest var innvolvert i diskusjoner/konflikter, var ho og ofte den som løyste dei, enten gjennom forhandlinger eller ved å trekkje seg tilbake når ho gjekk for langt. Turid var og det medlemmet i gruppa som oftes tok initiativ og ledelse i prossessdelen av EIT, som fokuserer mest på relasjoner og samarbeid mellom medlemmer på gruppa. 
+Bales staturer at medlemmer som er veldig oppgåvefokusert er mindre innvolvert i relasjonsretta aksjoner. Paul er den i gruppa som er mest oppgåvefokusert.På gruppa har han ein tendens til å ta ein faglig tilnærming, og liker å fokusere mest på oppgåva for hand. Han fell alstå oftere inn i rolla som diagnostiker (ref) og informasjonssøkjande (ref). Han er dermed ein styrke på gruppa ved at han held diskusjonene relevante, i tillegg til at han er eit pålitelig medlem når det gjeld å gjennomføre arbeid i tide. Me ser likevel ein tendens til at Paul er mindre involvert i relasjonsretta aksjoner på gruppa. 
+\\
+\\
+Den som oftas gjekk inn i rolla som sosial-emosionell leder var Turid. Ho var eit viktig ledd i gruppa i form av å uttrykke klare meininger og frustrasjoner over moment i gruppa som ikkje fungerte optimalt. Ho gjekk dermed inn i rolla som kritiker og kjensletolker (ref). Når det var ting som fungerte bra i gruppa kom ho og inn med støtte og oppmuntring til å fortsette på samme linje. Sjølv om ho var ein av dei som oftest var innvolvert i diskusjoner/konflikter, var ho og ofte den som løyste dei, enten gjennom forhandlinger eller ved å trekkje seg tilbake når ho gjekk for langt. Turid var og det medlemmet i gruppa som oftes tok initiativ og ledelse i prossessdelen av EIT, som fokuserer mest på relasjoner og samarbeid mellom medlemmer på gruppa. Her verka ho ofte som målvakt (ref), ved å igangsette runde rundt bordet og være oppmerksom på at alle kom til ordet.
 Situasjon: Paul og Turid.
+\\
+\\
+Bale's statuerer og at sosial-emotionell aksjoner ofte blir igangsatt av medlemmer som er mindre involvert i oppgåveretta aksjoner. Dette ser me igjen i gruppa ved at Joakim var innvolvert fleire sosial-emosjonelle aksjoner. Denne situasjonen har oppstått ved at prosjektet har havnet noko utenfor hans fagfelt. Han er dermed blitt mindre involvert i sjølve oppgåveløysninga. Derimot har han vore eit viktig tillegg i gruppa når det gjeld det sosiale samhaldet i gruppa. Han har vore den personen som i størst grad har bidratt til den lette tonen mellom medlemmene, og har tilrettelagt for at medlemmene i gruppa har blitt betre kjent. Dette har han gjort blant anna ved å alltid stille med ein positiv innstilling og involvere gruppa i diskusjoner som går på andre ting enn kun det faglige.
+\\
+\\
+Det bur ein liten kritikker i samtlige medlemmer på gruppa. Me ser likevel at Knut har tatt på seg denne rolla i gruppa i større grad enn andre. Kritikkaren er viktig i gruppesamanheng ved «systematisk, åpen, støttande og kritisk gransking av sitt og andres bidrag til gruppearbeidet.»
+Dette gjøres på ein måte slik at medlemmer på gruppa ikkje opplever kritikken som ein trussel, og dermed beholder fokuset på oppgåveløysning. (Innlegg frå andre).
 
-Bale statuerer og at sosial-emosjonelle aksjoner ofte blir igangsatt av medlemmer som er mindre involvert i oppgåveretta aksjoner. Dette ser me igjen i gruppa ved at Joakim har innført fleire sosial-emosjonelle aksjoner. Denne situasjonen har oppstått ved at prosjektet har havnet noko utenfor hans fagfelt. Han er dermed blitt mindre involvert i sjølve oppgåveløysninga. Derimot har han vore eit viktig tillegg i gruppa når det gjeld det sosiale samhaldet i gruppa. Han har vore den personen som i størst grad har bidratt til den lette tonen mellom medlemmene, og har tilrettelagt for at medlemmene i gruppa har blitt betre kjent. Dette har han gjort blant anna ved å alltid stille med ein positiv innstilling og involvere gruppa i diskusjoner som går på andre ting enn kun det faglige.
-
-
-Når det gjeld å løse opp spenninga på gruppa, spela alle medlemmene på gruppa ei viktig rolle ved å leggje ann ein uformell tone i gruppa.
-Humor!
-
-
-Den situasjonsbetinget lederskap strukturen førte og til at gruppemedlemmer tok rollen som leder i den fagdelen dei hadde mest autoritet på. Åsmund blei dermed ein uformell leder for fysikkdelen, Turid for numerikk delen og Knut for programeringsdelen i c++. Dei tok dermed ansvar for framgang og oppgåvedeling på desse områdene, og strukturerte samarbeidet mellom gruppemedlemmene på desse områdene. 
+ref // (1) Handbok for gruppearbeidet
 
 \section{Tilbakeblikk}
 
