Nytt animasjons-skript

--- a/prosess.sty
+++ b/prosess.sty
@@ -1,4 +1,5 @@
 %Slik at vi får norske navn på ting:
+\usepackage[norsk]{babel}
 \usepackage[norsk]{cleveref}
 
 %Forside for prosess, settes inn med \forsideProsess
