--- a/rapport/implementation.tex
+++ b/rapport/implementation.tex
@@ -8,14 +8,14 @@ The arguments leading to this choice was:
 
 \begin{itemize}
 \item Most of the group members had some earlier experience with the language.
-\item It allows for a high level of abstraction without loosing control of the
+\item It allows for a high level of abstraction without losing control of the
 underlying hardware.
-\item The code can be easily parallelized for shared memory machines using OpenMP.
-\item Many libraries exist for c++ that implements highly optimized linear algebra
+\item The code can be easily parallellized for shared memory machines using OpenMP.
+\item Many libraries exist for C++ that implement highly optimized linear algebra
 functionality.
 \end{itemize}
 
-Other languages cosidered where Matlab and c.
+Other languages considered were Matlab and C.
 
 The tool chosen to visualize the resulting data was gnuplot and ffmpeg. Writing a
 program using OpenGL was considered, but dismissed on the grounds of beeing too time consuming.
