--- a/rapport/implementation.tex
+++ b/rapport/implementation.tex
@@ -233,4 +233,6 @@ After looking closely at the differential equations and their discrete equivelen
 of practical issues surfaced. And the continued development of the equations was dismissed
 as the project was close to its end.
 
-
+Since the mass transfer equations was not properly implemented, the stop criteria was not 
+implemented either, as it turned out to be more practical to just run the simulation for as 
+many seconds as needed, and inspect the resulting plots.
