--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -88,7 +88,7 @@ det en god pekepinn på punkter som bør være i samarbeidskontrakten.
 \section{Johnson \& Johnson}
 \subsection{Gruppedynamikk}
 Gruppedynamikk handler om den vitenskapelige studien av oppførsel i grupper.
-Atferd i grupper, og forståelsen av den, er essensielt, da mennesker i all
+Adferd i grupper, og forståelsen av den, er essensielt, da mennesker i all
 hovedsak er gruppedyr, det være seg i familien, blant venner eller på jobb. Det
 første som må læres er; ``hva er en gruppe?''. Spørsmålet er vanskeligere enn
 man skulle tro, og Johnson \& Johnson (J\&J) \cite{jj} viser til at sosiologene
@@ -114,8 +114,52 @@ er nøyaktig og forstås korrekt, \textbf{(3)} etablere lederskap og/eller
 passende innflytelse, \textbf{(4)} implementere beslutningsmønstre som sørger
 for at samtlige medlemmer kommer med innslag, i tillegg til at hver enkelts
 resonnement og konklusjon er åpne for evaluering og analysering, \textbf{(5)}
-etabler metoder for å håndtere konflikter konstruktivt.$\\$ 
+etabler metoder for å håndtere konflikter konstruktivt.$\\$
 
+\subsection{Å verdsette ulikheter}
+Det er uunngåelig at en gruppe vil bestå av personer med ulike egenskaper. Det
+være seg faglige, personlige, kulturelle, religiøse, etniske og så videre.
+Det er viktig å sørge for at ulikhetene blant gruppemedlemmene kulminerer i noe
+positivt, Johnson \& Johnson presenterer ulike måter man kan forsikre dette på.
+Man må forsikre at det mellom gruppemedlemmene er en stor grad av positiv
+avhengighet av hverandres arbeid. Gruppen må også forsøke å etablere en felles
+gruppeidentitet som alle medlemmene kan samle seg bak, denne må være basert på
+flertallets verdier. I oppstartsfasen er det viktig at det brukes tid på å lære
+om forskjellene mellom medlemmene, et slikt enkelt grep kan kartlegge ulike
+måter og ordlegge seg på (eksempelvis i ulike kulturer), som kan forhindre
+miskommunikasjon og misforståelser på et senere stadium. $\\$
 
-% Lurer på om dette ikke er en forlengelse av de syv grunnreglene. Mulig det er
-% smart å skrive de to samlet.
+Det er også viktig at det etableres gode rutiner for konflikthåndtering, noe som
+helt sikkert vil oppstå i heterogene grupper. Konfliktene bør håndteres slik at
+gruppa får klarhet i hva som forårsaket uenigheten, og hva som ble gjort for å
+løse den. Bruk også tid på at gruppemedlemmene skal bli kjent med hverandre på
+et personlig nivå, på denne måten forsikrer man at diskusjonene mellom personene
+i gruppa blir friere og bedre.
+
+\section{Kommunikasjonsteori}
+%
+%look at patterns of group communication and the variables that influence communication effectiveness
+%
+For at ei gruppe skal kunne fungere effektivt, er det viktig at medlemmer klarer å kommuniserer enkelt og effektivt. Særlig i en tværrfaglig gruppe er det viktig at medlemmer er effektive i å formidle videre den informasjonen dei innehar. (Då løysninga av problemet i stor grad avhenger av evnen til gruppa har til å flette sammen informasjon som fleire medlemmer innehar, er det viktig at mottakeren av informasjon sitter igjen med det samme bilde som sender prøver å formidle.) Det er derfor viktig å he ein grunnleggende forståelse for gruppekommikasjon.
+For å forstå gruppekommunikasjonen i eit team, er det to ting som er viktige å sjå nærmere på; kommunikasjonsmønsteret/ kommunikasjonsnettverk og kommunikasjonseffektiviteten. Ved kommunikasjonsmønsteret meiner me her kven som kommunniserer med kven. Me kan her snakke om ein einvegskommunikajsone, der lederen adresserer gruppa, eller ein toveiskommunikasjon, som t.d. myldring blant gruppemedlemmer. Kommunikasjonseffektiven er her definert som evnen til å formidle ein beskjed på ein slik måte at mottakeren tolker beskjeden slik som sender sjølv har tenkt.
+Variable som kan verke inn på gruppe kommunikasjonen er normer på gruppa, humor osv.
+\\
+\\
+Det kommunikasjonsnettverka som blei nytta på gruppa vår opent nettverk og sirkel nettverk. I eit opent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kjem tydelig fram i diskusjoner på gruppa der det er fri flyt av ideer og meininger. Når ein avgjørelse blir tatt på gruppa starter me ofte med ein open diskusjon, og utvekslinger av meininger. Før ein avgjørelse blir tatt har me vanligvis hatt ein runde rundt bordet der alle får uttrykkt sin meining om saken. Dette er ein form for sirkel nettverk, der eit medlem uttrykker sin meining før han sender ordet videre til sidemannen. Dette er ein kommunikasjonsform som har utviklet seg naturlig på gruppa. Særlig i prosessdelen har det falt naturlig å ta ein runde rundt bordet for å høyre dei ulike medlemmenes meininger od følelser. Det er ofte Turid som har tatt initiativ til runde rundt bordet, og har dermed falt inn i ein rolle som ordstyrer. 
+\\
+\section{Roller}
+«I grupparbete spelar rollerna roll» (Stefan Jern, (1))\\
+
+«Ei rolle kan defineres som ein spesiell type særegenhet, som definerer din plass på gruppa». Ei gruppe består av ulike individ som kvar har sine særegenskaper. Desse personlige trekka er ein faktor som er med på å definere kva rolle eit medlem vil spele på gruppa.  Når ei gruppe går sammen, byggjes det forventninger til rolla dei andre vil ha på gruppa utfrå inntrykket dei får av individet. Dine egne forventninger og gruppas forventninger til di rolle er i stor grad med på å forme den rolla du vil ha i gruppa vidare. I eit gruppesamarbeid med flat struktur snakker me her om informelle roller. Informelle roller er roller som vekser fram gjennom samspelet i gruppa. Informelle roller i eit gruppesamarbeid kan i hovudsak deles i to roller; instrumentelle roller og sosio-emosjonelle roller. 
+\\
+\\
+I Robert-Bales likevektsteori statuerer han viktigheten ved ein balanse mellom arbeidsoppgåver og sosial-emosjonelle aktiviteter i effektive grupper. I effektive grupper ser ein derfor ofte at eit medlem trer inn i rolla som instrumentell leder, mens ein annan trer inn i rolla som sosial-emosiell leder. Kjenneteiknet på ein oppgåve-leder er at det er ofte han som setter igang aksjoner for å sikre at målet til gruppa blir nådd (oppgåveretta aksjoner), mens den sosiall-emosielle lederen setter igang aksjoner for å oppretthalde og forbedre interrelasjonene i gruppa (relasjonsretta aksjoner).
+\\
+\\
+I ein flatstrukturert gruppe er lederrollen ofte avhengig av situasjoner gruppa møter. Situsjonsbetinget lederskap er definert som delt lederskap blant gruppemedlemmer der medlemmene varierer oppførselen etter kva funksjon gruppa treng til ein kvar tid. Ein funksjon er ein aksjon som blir sett igang for å sikre effektiviteten i gruppa, og kan vera enten oppgåveretta aksjoner og relasjonsretta/samholdsretta aksjoner. 
+
+Benne og Sheat beskreiv i 1948, tretten instumentelle roller. Her tar eg for meg nokon av dei som var mest fremmtredene i vår gruppe; initiativtakeren, informasjonssøkaren, informasjonsgiveren, meiningsøkjaren, meiningsgivaren, diagnostikeren, samordnaren, opplysnaren, energigiveren og kritikkeren. Desse er alle viktige roller på gruppa. 
+
+Meiningsøkjaren spelar ein viktig del på gruppa ved at han innbyr til beslutningstaking, og legg grunnlaget for individ til å fremleggje sin vurdering av framlagte fakta. Diagnostikeren er den analyserende parten på gruppa, som tar opp problemer/utfordringer ved oppgåve, og eventuelt leder gruppa i ei ny retning. Samordnaren derimot bidrar ved å samkjøre gruppas arbeid og flette dei samman til ein heilhet.
+
+Benne og Sheat satt og opp åtte sosio-emosjonelle roller i ei gruppe; oppmuntraren, harmoniseraren, spenningoppløseren, kompromisten, målvakten, kjenslertolken, normsetteren og følgeren. Ein målvakt verkar som ein slags ordstyrar, som øker kommunikasjonen ved å bremse pratmakerene og passe på at alle kjem til ordet. Desse rollene kan flukturerer mellom medlemmene på gruppa, men ofte ser ein at eit individ påtar seg nokon roller med høgare frekvens.
