--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -136,6 +136,38 @@ løse den. Bruk også tid på at gruppemedlemmene skal bli kjent med hverandre p
 et personlig nivå, på denne måten forsikrer man at diskusjonene mellom personene
 i gruppa blir friere og bedre.
 
+\section{Wheelan}
+ubsection{Effective teammedlemmer}
+
+Wheeland beskriver gruppemedlemmer's oppførsel og holdninger i effektive grupper. En viktig del ved å være en effektiv gruppemedlem består i å vurdere sin egen oppførsel og holdning og måten man kommuniserer med gruppa på. Teorien er presentert i form av retningslinjer. 
+
+\begin{itemize}
+\item[1.] Ikke skyld på andre for gruppas problemer
+\item[2.] Vær engasjert når gruppa setter mål, roller og avklaring av oppgaver
+\item[3.] Vær for en åpen kommunikasjonsstruktur der alle medlemmer deltar og blir hørt 
+\item[4.] Ha en riktig fordeling mellom diskusjon av oppgaven og støttende kommunikasjon
+\item[5.] Bruk en effektiv måte å løse oppgaver på, og en effektiv måte å ta avgjørelser
+\item[6.] Lage normer som støtter produktivitet, innovasjon og frihet til å uttale seg
+\item[7.] Bidra med normer som forfremmer produktivitet
+\item[8.] Forfremme gruppearbeid
+\end{itemize}
+
+Punkt 1 kaller Wheeland for ''the fundamental attribution error'', fordi vi ofte tilskriver andres holdninger til personlige trekk uten å ta andre faktorer i betraktning. For eksempel kan vi skylde på sjefen for dårlige resultater uten å ta i betraktning budsjettrestriksjoner, og dårlig gruppesammarbeid. En gruppe blir ikke effektiv før alle tar ansvar for gruppa's samarbeid og produktivitet. \\
+
+Punkt 2 dreier seg om å være klar over hva som foregår i gruppearbeidet. Hvis man ikke forstår hva som foregår, må man våge å spørre. Å stille spørsmål til hele gruppa vil føre til en rikere diskusjon og vil klargjøre ting for alle gruppemedlemmer. \\
+
+Punkt 3 tar opp problemet med at medlemmer i gruppa ikke tør å si det de mener fordi de ofte klassifiserer andre i gruppa, og ut i fra det angir dem høyere eller lavere status. Disse medlemmene kan bli ignonert i gruppa, noe som fører til at gruppa blir mindre produktiv. En måte å sikre at alle blir hørt på er så enkelt som å ta en runde rundt bordet for å høre hva hver og en har å si. \\
+
+Punkt 4 handler om oppgaveorientert diskusjon i gruppen. Forskning tyder på at suksessfulle grupper bruker om lag 70-80 \% av tiden sin til å diskutere oppgave og mål. Men ofte hender det at gruppa går seg bort i en lang diskusjon om noe annet. \\
+
+Punkt 5 diskuterer effektive måter for oppgaveløsning og det å ta beslutninger. Det nevnes fire steg som kan følges: Å innse problemet, diagnotisere problemet, ta beslutningen, og akseptere og gjennomføre beslutningen. I praksis består de to første stegene i å planlegge strategier for å løse problemet. Når man så skal ta en beslutning er det ikke noe klart svar på hvilken beslutningsmåte som er best, men gruppa skal velge en beslutningsmåte der alle medlemmer kan akseptere beslutningen.  \\
+
+Punkt 6 handler om gruppas avtale. Hvis gruppas medlemmer bare er middelsmådige enige, blir resultatet også middelsmådig. Hvis medlemmene derimot er enige om å gjøre en best mulig jobb og løse problemer på best mulig måte, er det større sannsynlighet for at resultatet blir bra. Frihet til å uttale seg er nevnt i punkt 3. \\
+
+Punkt 7 dreier seg om normer, dvs. regler om medlemmenes oppførsel og hva som skal gjøres. Normer er nødvendige for å samordne gruppas arbeid mot et felles mål. Spesielt er normer viktige når medlemmene er uenige i hvordan ting skal gjøres. \\
+
+Punkt 8 diskuterer karaktertrekk ved god gruppesamarbeid. Disse er bl.a. god kommunikasjon, vennlig atmosfære, stor innsatsvilje, og stor grad av arbeidsfordeling.
+
 \section{Kommunikasjonsteori}
 %
 %look at patterns of group communication and the variables that influence communication effectiveness
