--- a/rapport.sty
+++ b/rapport.sty
@@ -2,6 +2,15 @@
 \usepackage[english]{babel}
 \usepackage{cleveref}
 \usepackage{listings}
+\usepackage{inconsolata}
+\lstset{
+basicstyle=\small\sffamily,
+stringstyle=\ttfamily,
+showstringspaces=false,
+numbers=left,
+numberstyle=\tiny,
+stepnumber=2,
+}
 
 %Forside for rapport, settes inn med \forside
 \newcommand*{\forside}{\begingroup
