--- a/rapport/implementation.tex
+++ b/rapport/implementation.tex
@@ -18,7 +18,7 @@ functionality.
 Other languages considered were Matlab and C.
 
 The tool chosen to visualize the resulting data was gnuplot and ffmpeg. Writing a
-program using OpenGL was considered, but dismissed on the grounds of beeing too time consuming.
+program using OpenGL was considered, but dismissed on the grounds of being too time consuming.
 
 \section{Program design}
 
@@ -33,13 +33,13 @@ program using OpenGL was considered, but dismissed on the grounds of beeing too 
 The program mainly consist of three parts:
 
 \begin{itemize}
-\item C++ implementation of Linear algebra functionality of the discrete equations.
+\item C++ implementation of matrix representations of the discretized equations.
 \item C++ implementation of the conjugate gradient method for solving the
 equations described.
 \item Bash script for generating plots and and movie of the generated data.
 \end{itemize}
 
-See \cref{fig:classdiagram} for a class diagram of c++ implementation.
+See \cref{fig:classdiagram} for a class diagram of the C++ implementation.
 
 The Bash script is not discussed in further detail as it can be considered to be
 very simple.
