--- a/rapport/introduction.tex
+++ b/rapport/introduction.tex
@@ -24,7 +24,7 @@ were formulated:
 
 \begin{itemize}
   \item How is preparation of bacon in a microwave oven modelled numerically?
-  \item How does water and fat content affect the preparation, and what preparation time is optimal?
+  \item How does the size of the bacon affect the preparation, and what preparation time is optimal?
 \end{itemize}
 
 \section{Reasoning behind the problem formulation}
