kommentarer i prosess/analyse.tex

--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -1,14 +1,21 @@
 %Overskrifter er kokt, endre dem så det passer.
 
-\chapter{Analyse av gruppearbeidet}
+%Kommentarene nedenfor gjelder situasjoner og elementer fra gruppelogg som skal
+%dras inn. I tillegg må det reflekteres, og relevant teori må dras inn
 
+\chapter{Analyse av gruppearbeidet}
 \section{Kompetanse i praksis}
+%Samspillet Åsmund->Turid->Knut med difflikn->diskretisering->programmering
 
 \section{Kommunikasjon og samspill}
+%Situasjon: øvelsen med evaluering ``det enkelte teammedlem''
+%Situasjon: legomannen - bruk gruppelogg, men prøv å dra parallell til hvordan vi arbeider generelt.
 
 \section{Bruk av regler/kontrakt}
+%Situasjon: Knut Halvor og språk på prosessrapport
+%Situasjon: Rapportering da Joakim var syk
 
 \section{Teori vs. virkelighet}
-
-\section{Situasjoner og eksempler}
+%Humor, selvironi, selvhøytidelighet - stemmer bra jamført teori 
+%Situasjon: ``In your face!'' fra Turid til Joakim om Crank og stabilitet
 
