--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -67,9 +67,9 @@ Studerer ved industriell matematikk ved linja numerisk matematikk ved NTNU, med 
 Jeg har tidligere jobbet en del i grupper gjennom studiet på NTNU. Disse gruppene har midlertidig vært prega av en homogenitet i forhold til fag bakgrunn. Det har gjort at vi angriper nye problemstillinger med en lik tankegang, og vi mister evnen til å komme opp med mer kreative ideer til løsningsmetoder. De differansene som jeg har opplevd i samband av gruppearbeid, har ofte grunna i ulike personligheter og kommunikasjonstil. Da vi ikke har hatt noe opplæring i å takle ulike differanser og konflikter som disse ofte fører til, har disse differansene ofte hatt en negativ innvirkning på gruppearbeidet i form av uløste konflikter og stagnering. Jeg har dermed sett fram til muligheten med å lære mer om sjølve gruppeprosessen og gruppedynamikk for å kunne takle slike situasjoner annerledes i framtida. Jeg trives vanligvis godt i grupper, og synes gruppearbeid kan være både fremende og utfordrende.  Jeg såg derfor fram til å jobbe i ei mer heterogen gruppe, med tanke på fag bakgrunn.
 
 
-\subsection*{Turid om sin rolle i gruppa}
-
-Jeg valgte landbyen MIA utifra min interesse for numerisk matematikk. Jeg falt dermed ganske naturlig inn i ei rolle med ansvar for den numeriske berekninger i prosjektet. Når det gjaldt arbeide rundt gruppeprosessen merka jeg fort at jeg fekk en noe kontrollerende og styrende rolle. Jeg følte selv at det var ei nødvendig  rolla for å holde effektiviteten og fokuset oppe i denne delen av gruppearbeidet. Jeg føler dermed at denne rollen i noe grad var ei rolle som blei tilegna meg av gruppa. Som eneste jente på gruppe merket jeg og en større forventing til meg når det gjaldt refleksjoner over gruppearbeidet. Jeg fekk dermed ofte rollen som observatør av gruppa, både i prosjektarbeid og ulike prosess øvinger. 
+%\subsection*{Turid om sin rolle i gruppa}
+%
+%Jeg valgte landbyen MIA utifra min interesse for numerisk matematikk. Jeg falt dermed ganske naturlig inn i ei rolle med ansvar for den numeriske berekninger i prosjektet. Når det gjaldt arbeide rundt gruppeprosessen merka jeg fort at jeg fekk en noe kontrollerende og styrende rolle. Jeg følte selv at det var ei nødvendig  rolla for å holde effektiviteten og fokuset oppe i denne delen av gruppearbeidet. Jeg føler dermed at denne rollen i noe grad var ei rolle som blei tilegna meg av gruppa. Som eneste jente på gruppe merket jeg og en større forventing til meg når det gjaldt refleksjoner over gruppearbeidet. Jeg fekk dermed ofte rollen som observatør av gruppa, både i prosjektarbeid og ulike prosess øvinger. 
 
 \subsection*{Gruppa om Turid}
 Turid er ansvarsbevisst og har tatt mye initiativ for prosessdelen. Hun er en
